# cpphv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
example/: CMakeLists.txt  logtest.c  tcpclienttest.c  tcpclienttest.cpp  tcpservertest.c  tcpservertest.cpp  timertest.c  websocketclienttest.cpp  websocketservertest.cpp
json/: CJsonObject.cpp  CJsonObject.hpp  CMakeLists.txt  cJSON.c  cJSON.h
src/: CMakeLists.txt  GateServer.hpp  INetClient.hpp  INetServer.hpp  INetTransfer.hpp  LinkServer.hpp  Msg.hpp  Router.hpp
src/gateserver/: main.cpp
src/linkserver/: main.cpp
